@@ -19,8 +19,6 @@
  * CDDL HEADER END
  */
 
-/* @@xfail: arbitrary tick timers not yet implemented */
-
 /*
  * Copyright 2006 Sun Microsystems, Inc.  All rights reserved.
  * Use is subject to license terms.
